# boogie-vec

./: .gitignore  ATTRIBUTIONS.md  CMakeLists.txt  README.md
examples/: ingest.py
src/: backend_factory.cpp  backend_factory.hpp  knn_annoy.cpp  knn_annoy.hpp  knn_bruteforce.cpp  knn_bruteforce.hpp  main.cpp  server.cpp  server.hpp  snapshot_io.cpp  snapshot_io.hpp  util.cpp  util.hpp
tests/: smoke.sh  test_boogie_vec.sh
